--- a/views/author.ejs
+++ b/views/author.ejs
@@ -21,7 +21,8 @@
         <header>
             <div class="navbarContainer">
                 <div class="navbarLogo"><embed class="logo" src="../images/Logo.svg"></div>
-                <div class="navLinks">
+                <div class="hamburger" id="hamburger">&#9776;</div>
+                <div class="navLinks" id="navLinks">
                     <ul class="navLinkList work-sans">
                         <li><a href="/">Home</a></li>
                         <li><a href="/blogs">Blog</a></li>
@@ -220,6 +221,10 @@
         </div>
     </footer>
     <script>
+        document.getElementById('hamburger').addEventListener('click', () => {
+            const nav = document.getElementById('navLinks');
+            nav.classList.toggle('open');
+        });
         async function handleProfile(Id){
             const userId = parseInt(Id);
             const profile_icon_url = prompt("Please enter your profile icon Url:");
