--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,8 @@
     <header>
         <div class="navbarContainer">
             <div class="navbarLogo"><embed class="logo" src="../images/Logo.svg"></div>
-            <div class="navLinks">
+            <div class="hamburger" id="hamburger">&#9776;</div>
+            <div class="navLinks" id="navLinks">
                 <ul class="navLinkList work-sans">
                     <li><a href="/">Home</a></li>
                     <li><a href="/blogs">Blog</a></li>
@@ -49,10 +50,6 @@
                     <div class="heroDiv">
                         <div class="tags">
                             <%for (const tag of featuredPost.tags.split(',').map(x=>x.trim())){%>
-                            <!--<div class="tag"><p>Technology</p></div>
-                            <div class="tag">
-                                <p>Technology</p>
-                            </div>-->
                             <div class="tag">
                                 <p><%=tag%></p>
                             </div>
@@ -78,16 +75,8 @@
                 <div class="blogCard">
                     <a href='blog/<%=post.blog_id%>' class="blogCardLink">
                     <div class="blogCardImage"><img src="<%=post.banner_image_url%>"></div>
-                    
-                    <!--<div class="tag">
-                        <p>Technology</p>
-                    </div>-->
                     <div class="tags">
                         <%for (const tag of post.tags.split(',').map(x=>x.trim())){%>
-                            <!--<div class="tag"><p>Technology</p></div>
-                                                <div class="tag">
-                                                    <p>Technology</p>
-                                                </div>-->
                             <div class="tag">
                                 <p>
                                     <%=tag%>
@@ -105,71 +94,6 @@
                     </a>
                 </div>
                 <%}%>
-                <!--<div class="blogCard">
-                    <div class="blogCardImage"><img src="../images/cardImage.png"></div>
-                    
-                    <div class="tag">
-                        <p>Technology</p>
-                    </div>
-                    <h3>The Impact of Technology on the Workplace: How Technology is Changing</h3>
-                    <div class="blogDetails">
-                        <i class="far fa-user"></i>
-                        <p class="work-sans authorName">Palash Acharya</p>
-                        <p class="work-sans">January 29 2025</p>
-                    </div>
-                </div>
-                <div class="blogCard">
-                    <div class="blogCardImage"><img src="../images/cardImage.png"></div>
-                    
-                    <div class="tag">
-                        <p>Technology</p>
-                    </div>
-                    <h3>The Impact of Technology on the Workplace: How Technology is Changing</h3>
-                    <div class="blogDetails">
-                        <i class="far fa-user"></i>
-                        <p class="work-sans authorName">Palash Acharya</p>
-                        <p class="work-sans">January 29 2025</p>
-                    </div>
-                </div>
-                <div class="blogCard">
-                    <div class="blogCardImage"><img src="../images/cardImage.png"></div>
-                    
-                    <div class="tag">
-                        <p>Technology</p>
-                    </div>
-                    <h3>The Impact of Technology on the Workplace: How Technology is Changing</h3>
-                    <div class="blogDetails">
-                        <i class="far fa-user"></i>
-                        <p class="work-sans authorName">Palash Acharya</p>
-                        <p class="work-sans">January 29 2025</p>
-                    </div>
-                </div>
-                <div class="blogCard">
-                    <div class="blogCardImage"><img src="../images/cardImage.png"></div>
-                    
-                    <div class="tag">
-                        <p>Technology</p>
-                    </div>
-                    <h3>The Impact of Technology on the Workplace: How Technology is Changing</h3>
-                    <div class="blogDetails">
-                        <i class="far fa-user"></i>
-                        <p class="work-sans authorName">Palash Acharya</p>
-                        <p class="work-sans">January 29 2025</p>
-                    </div>
-                </div>
-                <div class="blogCard">
-                    <div class="blogCardImage"><img src="../images/cardImage.png"></div>
-                    
-                    <div class="tag">
-                        <p>Technology</p>
-                    </div>
-                    <h3>The Impact of Technology on the Workplace: How Technology is Changing</h3>
-                    <div class="blogDetails">
-                        <i class="far fa-user"></i>
-                        <p class="work-sans authorName">Palash Acharya</p>
-                        <p class="work-sans">January 29 2025</p>
-                    </div>
-                </div>-->
             </div>
             <div class="pagination">
                 <% if (currentPage> 1) { %>
@@ -201,6 +125,11 @@
         </div>
     </footer>
     <script>
+
+        document.getElementById('hamburger').addEventListener('click', () => {
+                const nav = document.getElementById('navLinks');
+                nav.classList.toggle('open');
+        });
         document.getElementById('logout-link').addEventListener('click', async function (e) {
                 e.preventDefault();
 
