fixed footer styling issues, default images fixed

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -16,8 +16,7 @@
 </head>
 
 <body>
-    <main>
-
+    <div class="page-wrapper">
         <header>
             <div class="navbarContainer">
                 <div class="navbarLogo"><embed class="logo" src="../images/Logo.svg"></div>
@@ -42,6 +41,8 @@
             </div>
         </header>
 
+
+    <main class="content">
         <section id="authorDetialSection">
             <div class="authorDetailsContainer">
                 <div class="authorCard">
@@ -220,6 +221,7 @@
             </ul>
         </div>
     </footer>
+    </div>
     <script>
         document.getElementById('hamburger').addEventListener('click', () => {
             const nav = document.getElementById('navLinks');
