--- a/views/blog_listing.ejs
+++ b/views/blog_listing.ejs
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <div class="page-wrapper">
     <header>
         <div class="navbarContainer">
             <div class="navbarLogo"><embed class="logo" src="../images/Logo.svg"></div>
@@ -40,7 +41,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="content">
         <section id="blogListingTitleSection">
             <div class="blogListingTitle">
                 <h4 class="listingSubHeader">OUR BLOGS</h4>
@@ -144,6 +145,7 @@
             </ul>
         </div>
     </footer>
+    </div>
     <script>
         document.getElementById('hamburger').addEventListener('click', () => {
             const nav = document.getElementById('navLinks');
