--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -31,6 +31,16 @@ body {
     font-style: normal;
 }
 
+.page-wrapper {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.content {
+    flex: 1;
+}
+
 ul {
     text-decoration: none;
     list-style: none;
@@ -320,6 +330,10 @@ a {
     background-color: #333;
     color: white;
     border-color: #333;
+}
+
+footer {
+    margin-top: auto;
 }
 
 .footerContainer {
