--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -314,6 +314,7 @@ a {
 }
 
 .page-link {
+    font-family: 'Work Sans', serif;
     padding: 0.5rem 1rem;
     border: 1px solid #ddd;
     color: #333;
@@ -1500,7 +1501,7 @@ footer {
     background-color: #E8E8EA;
     border-radius: 10px;
     padding: 30px;
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 20px;
